fixed an alignment issue with the suggestion list in the "ask a question" form

--- a/qa-styles.less
+++ b/qa-styles.less
@@ -963,7 +963,7 @@ h2 {
   padding: 0 8px 8px 8px;
   width: @formwidth;
 
-  >ul {
+  >ul, .qa-q-title-list {
     padding-left: 1em;
   }
 }
